k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campuslink-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campuslink-gateway
  template:
    metadata:
      labels:
        app: campuslink-gateway
    spec:
      containers:
      - name: gateway
        image: jefflionel40/campuslink-gateway:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: campuslink-gateway
spec:
  selector:
    app: campuslink-gateway
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
