k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campuslink-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: campuslink-gateway
            port:
              number: 3100
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: campuslink-gateway
            port:
              number: 3100
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: campuslink-files
            port:
              number: 5106
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-frontend
            port:
              number: 80
